Uploaded image for project: 'Parquet'
  1. Parquet
  2. PARQUET-745

TypedRowGroupStatistics fails to PlainDecode min and max in ByteArrayType

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • cpp-1.0.0
    • parquet-cpp
    • None

    Description

      The TypedRowGroupStatistics tries to PlainDecode the given min and max strings. This fails for BinaryArrayType because it only contains the actual data and not the prepended length.

      Attachments

        Activity

          People

            florian.scheibner Florian Scheibner
            florian.scheibner Florian Scheibner
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: