PARQUET-745: TypedRowGroupStatistics fails to PlainDecode min and max in ByteArrayType

I'm not sure how this code is supposed to work, this seems to solve the issue.

The code was added in 176b08c305919551ecfd5fc2f741f7bff4deefdd by @lomereiter I think.

Author: fscheibner <florian.scheibner@snowflake.net>

Closes #176 from flode/stats and squashes the following commits:

7a24906 [fscheibner] fix format
f283edb [fscheibner] Pass wether minmax is set
b50c985 [fscheibner] format
f969a9f [fscheibner] Specialize PlainEncode and PlainDecode
6b5884d [fscheibner] format
f17926d [fscheibner] fix typedrowgroup

Change-Id: Iafbb09044f31978997436bbd30549b8b22b0a54c