cpp/src/parquet/column/statistics.h
@@ -142,7 +142,8 @@ class TypedRowGroupStatistics : public RowGroupStatistics {
 
   TypedRowGroupStatistics(const ColumnDescriptor* schema, const std::string& encoded_min,
       const std::string& encoded_max, int64_t num_values, int64_t null_count,
-      int64_t distinct_count, MemoryAllocator* allocator = default_allocator());
+      int64_t distinct_count, bool has_min_max,
+      MemoryAllocator* allocator = default_allocator());
 
   bool HasMinMax() const override;
   void Reset() override;
@@ -194,6 +195,14 @@ inline void TypedRowGroupStatistics<ByteArrayType>::Copy(
   std::memcpy(&buffer[0], src.ptr, src.len);
   *dst = ByteArray(src.len, buffer.data());
 }
+
+template <>
+void TypedRowGroupStatistics<ByteArrayType>::PlainEncode(
+    const T& src, std::string* dst);
+
+template <>
+void TypedRowGroupStatistics<ByteArrayType>::PlainDecode(
+    const std::string& src, T* dst);
 
 using BoolStatistics = TypedRowGroupStatistics<BooleanType>;
 using Int32Statistics = TypedRowGroupStatistics<Int32Type>;
